--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -39,7 +39,7 @@ Last modified: 20.05.2020
 
 button#close-settings {
   padding: 0.25rem 0.5rem;
-  background-color: var(--color-surface-dark);
+  background-color: var(--color-settings-btn-surface);
   border-radius: var(--border-radius);
   border: none;
   position: relative;
@@ -47,7 +47,7 @@ button#close-settings {
   width: 6rem;
   transition: 0.2s;
   left: calc(50% - 3rem);
-
+  color: var(--color-button-text);
 }
 
 button#close-settings:hover {
@@ -86,7 +86,7 @@ button#close-settings:hover {
 
 .checkmark {
   position: absolute;
-  
+  top: 0;
   right: 0;
   height: 1.1rem;
   width: 1.1rem;
@@ -96,7 +96,7 @@ button#close-settings:hover {
 }
 
 /* On mouse-over, add a grey background color */
-.checkbox-container:hover input ~ .checkmark {
+.checkbox-container:hover input~.checkmark {
   background-color: var(--color-surface-dark);
 }
 
@@ -108,7 +108,7 @@ button#close-settings:hover {
 }
 
 /* Show the checkmark when checked */
-.checkbox-container input:checked ~ .checkmark:after {
+.checkbox-container input:checked~.checkmark:after {
   display: block;
 }
 
